--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -27,5 +27,9 @@ jobs:
         pytest
 
     - name: Check for test failures
-      run: exit $(pytest --collect-only | grep 'collected \d\+ items' | awk '{print $2}')
-      continue-on-error: true
+      run: |
+        status=$?
+        if [ $status -ne 0 ]; then
+          echo "Tests failed, aborting..."
+          exit 1
+        fi
