--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -1,34 +1,24 @@
-name: TEST
+name: Pytest
 
 on: [pull_request]
 
 jobs:
-  run-tests:
-    strategy:
-      fail-fast: false
-      matrix:
-        os: [ubuntu-latest, windows-latest, macos-latest]
-        python-version:
-          - "3.6"
-          - "3.7"
-          - "3.8"
-          - "3.9"
-          - "3.10"
-          - "3.11"
-
-    runs-on: ${{ matrix.os }}
+  test:
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v3
-        
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: ${{ matrix.python-version }}
+    - uses: actions/checkout@v2
 
-      - name: Install dependencies
-        run: python -m pip install pytest .
+    - name: Set up Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.11' # Ajusta la versión de Python según tus necesidades
 
-      - name: Run tests
-        run: python -m pytest
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install pytest
+
+    - name: Run tests
+      run: |
+        pytest
