--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -12,8 +12,7 @@ jobs:
     - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: '3.11' # Ajusta la versión de Python según tus necesidades
-
+        python-version: '3.11'
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
